--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,8 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/
+
 
   app:
     build: .
@@ -25,6 +26,9 @@ services:
       DB_PORT: 5432
     depends_on:
       - db
+   
+
+      
     volumes:
       - C:/Users/HP VICTUS/Documents/GitHub/Billing_Microservice/.env:/app/.env  # Agrega esta línea
 volumes:
